# backstage

./: .dockerignore  .gitignore  Dockerfile  app-config.local.old.yaml  app-config.production.yaml  app-config.yaml  aws-id  aws-secret-to-github  catalog-info.yaml  code  docker-compose.yaml  entities.yaml  gh-secret  group.yaml  org.yaml  package.json  requirements.txt
examples/github-actions/: teckdocs
examples/github-actions/workflows/: docker-compose.yml
examples/template/: template.yaml
github-actions/: build-techdocs.yml  teckdocs  update_secrets.sh
github-actions/hooks/: pre-push
templates/aws-lambda/: entities.yaml  if.tf  main.tf  org.yaml  template.yaml
templates/eks-cluster/: template.yaml
templates/eks-cluster/content/: catalog-info.yaml  index.js
templates/eks-cluster/content/.github/workflows/: manage-eks-cluster.yml
templates/nodejs/: template.yaml
templates/python-advanced-template/: ,gitignore  .gitignore  pyproject.toml  setup.py  template.yaml
templates/python-advanced-template/.github/workflows/: ci.yaml
templates/python-advanced-template/content/: README.md  catalog-info.yaml
templates/python-advanced-template/content/src/: __init__.py  main.py
templates/python-advanced-template/content/tests/: test_main.py
util/config/: app-config.yaml
util/dockerfile/: Dockerfile-multi
